# aws-cost-notifier-old

./: .gitignore  .projenrc.js  Cargo.toml  README.md  package.json
.projen/: tasks.json
src/: main.rs  main.ts
