[package]
name = "aws-cost-notifier"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
lambda_runtime = "0.7.2"
serde_json = "1.0.91"
tokio = "1.24.0"