[package]
name = "aws-cost-notifier"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.53.0"
aws-sdk-costexplorer = "0.23.0"
chrono = "0.4.23"
chrono-utilities = "0.0.0-alpha1"
lambda_runtime = "0.7.2"
serde_json = "1.0.91"
tokio = "1.24.0"
